// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatepickerRange /w complete startDate 1`] = `
<div
  class="DatepickerRangestyles__Box-sc-1dd67xt-0 hsiRJA"
>
  <div
    class="DatepickerRangestyles__InputBox-sc-1dd67xt-1 jqEJOL"
  >
    <div
      class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
    >
      <label
        class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
      >
        <div
          class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
        >
          <div
            class="Inputstyles__Box-hc8ttv-1 bzkyqR"
          >
            <div
              class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
            >
              <div
                class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
              >
                22.02.1988
              </div>
            </div>
            <input
              aria-invalid="false"
              class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
              value="22.02.1988"
            />
          </div>
        </div>
        <div
          class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
        >
          <svg
            cursor="pointer"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`DatepickerRange /w date not in range 1`] = `
<div
  class="DatepickerRangestyles__Box-sc-1dd67xt-0 hsiRJA"
>
  <div
    class="DatepickerRangestyles__InputBox-sc-1dd67xt-1 jqEJOL"
  >
    <div
      class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
    >
      <label
        class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
      >
        <div
          class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
        >
          <div
            class="Inputstyles__Box-hc8ttv-1 bzkyqR"
          >
            <div
              class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
            >
              <div
                class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
              >
                01.06.2000 - 14.06.2000
              </div>
            </div>
            <input
              aria-invalid="false"
              class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
              value="01.06.2000 - 14.06.2000"
            />
          </div>
        </div>
        <div
          class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
        >
          <svg
            cursor="pointer"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`DatepickerRange /w invalid 1`] = `
<div
  class="DatepickerRangestyles__Box-sc-1dd67xt-0 hsiRJA"
>
  <div
    class="DatepickerRangestyles__InputBox-sc-1dd67xt-1 jqEJOL"
  >
    <div
      class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
    >
      <label
        class="Inputstyles__Wrapper-hc8ttv-6 iaA-dFS"
      >
        <div
          class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
        >
          <div
            class="Inputstyles__Box-hc8ttv-1 bzkyqR"
          >
            <div
              class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
            >
              <div
                class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
              >
                ДД.ММ.ГГГГ
              </div>
            </div>
            <input
              aria-invalid="true"
              class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
              value=""
            />
          </div>
        </div>
        <div
          class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
        >
          <svg
            cursor="pointer"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`DatepickerRange /w not complete 1`] = `
<div
  class="DatepickerRangestyles__Box-sc-1dd67xt-0 hsiRJA"
>
  <div
    class="DatepickerRangestyles__InputBox-sc-1dd67xt-1 jqEJOL"
  >
    <div
      class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
    >
      <label
        class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
      >
        <div
          class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
        >
          <div
            class="Inputstyles__Box-hc8ttv-1 bzkyqR"
          >
            <div
              class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
            >
              <div
                class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
              >
                11.12.1900 - 22.02.1988
              </div>
            </div>
            <input
              aria-invalid="false"
              class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
              value="11.12.1900 - 22.02.1988"
            />
          </div>
        </div>
        <div
          class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
        >
          <svg
            cursor="pointer"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`DatepickerRange /w not complete endDate 1`] = `
<div
  class="DatepickerRangestyles__Box-sc-1dd67xt-0 hsiRJA"
>
  <div
    class="DatepickerRangestyles__InputBox-sc-1dd67xt-1 jqEJOL"
  >
    <div
      class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
    >
      <label
        class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
      >
        <div
          class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
        >
          <div
            class="Inputstyles__Box-hc8ttv-1 bzkyqR"
          >
            <div
              class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
            >
              <div
                class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
              >
                22.02.1988 - 22.ММ.ГГГГ
              </div>
            </div>
            <input
              aria-invalid="false"
              class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
              value="22.02.1988 - 22"
            />
          </div>
        </div>
        <div
          class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
        >
          <svg
            cursor="pointer"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`DatepickerRange /w not complete startDate 1`] = `
<div
  class="DatepickerRangestyles__Box-sc-1dd67xt-0 hsiRJA"
>
  <div
    class="DatepickerRangestyles__InputBox-sc-1dd67xt-1 jqEJOL"
  >
    <div
      class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
    >
      <label
        class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
      >
        <div
          class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
        >
          <div
            class="Inputstyles__Box-hc8ttv-1 bzkyqR"
          >
            <div
              class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
            >
              <div
                class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
              >
                22.02.ГГГГ
              </div>
            </div>
            <input
              aria-invalid="false"
              class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
              value="22.02"
            />
          </div>
        </div>
        <div
          class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
        >
          <svg
            cursor="pointer"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`DatepickerRange 1`] = `
<div
  class="DatepickerRangestyles__Box-sc-1dd67xt-0 hsiRJA"
>
  <div
    class="DatepickerRangestyles__InputBox-sc-1dd67xt-1 jqEJOL"
  >
    <div
      class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
    >
      <label
        class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
      >
        <div
          class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
        >
          <div
            class="Inputstyles__Box-hc8ttv-1 bzkyqR"
          >
            <div
              class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
            >
              <div
                class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
              >
                ДД.ММ.ГГГГ
              </div>
            </div>
            <input
              aria-invalid="false"
              class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
              value=""
            />
          </div>
        </div>
        <div
          class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
        >
          <svg
            cursor="pointer"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</div>
`;
